2003-04-02  Jakub Jelinek  <jakub@redhat.com>

	* Makefile (libpthread-routines): Add pthread_atfork.
	(libpthread-static-only-routines): Add pthread_atfork.

2003-04-01  Jakub Jelinek  <jakub@redhat.com>

	* pthread.c (__pthread_wait_for_restart_signal): Use
	__pthread_sigsuspend instead of sigsuspend.
	* internals.h (__pthread_sigsuspend): New prototype.
	* Makefile (libpthread-routines): Add pt-sigsuspend.
	(tests): Add tst-cancel7.
	* sysdeps/unix/sysv/linux/pt-sigsuspend.c: New file.
	* sysdeps/unix/sysv/linux/alpha/pt-sigsuspend.S: New file.
	* sysdeps/unix/sysv/linux/ia64/pt-sigsuspend.c: New file.
	* sysdeps/unix/sysv/linux/s390/s390-64/pt-sigsuspend.c: New file.
	* sysdeps/unix/sysv/linux/sparc/sparc64/pt-sigsuspend.c: New file.
	* sysdeps/unix/sysv/linux/x86_64/pt-sigsuspend.c: New file.
	* tst-cancel7.c: New test.

2003-03-31  Alexandre Oliva  <aoliva@redhat.com>

	* alloca_cutoff.c: Include internals.h.
	* sysdeps/pthread/errno-loc.c: Include linuxthreads/internals.h.
	* sysdeps/pthread/herrno-loc.c: Likewise.
	* sysdeps/pthread/res-state.c: Likewise.

2003-03-25  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/bits/typesizes.h: New file.
	* sysdeps/unix/sysv/linux/alpha/bits/typesizes.h: New file.
	* sysdeps/unix/sysv/linux/sparc/bits/typesizes.h: New file.

2003-03-24  Daniel Jacobowitz  <drow@mvista.com>

	* sysdeps/unix/sysv/linux/arm/sysdep-cancel.h
	(DOARGS_5, DOARGS_6, DOARGS_7): Rewritten.

2003-03-22  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/fork.c (__fork): Add libc_hidden_def.

2003-03-21  Daniel Jacobowitz  <drow@mvista.com>

	* sysdeps/unix/sysv/linux/arm/sysdep-cancel.h
	(SINGLE_THREAD_P_PIC): Use "reg" instead of "lr".

2003-03-21  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/tls.h [__ASSUME_SET_THREAD_AREA_SYSCALL]
	(TLS_SETUP_GS_SEGMENT): Fix a typo.

2003-03-19  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/Makefile: Fix cut&paste error.

2003-03-18  Roland McGrath  <roland@redhat.com>
